2006-11-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-common.c:
	(bacon_video_widget_common_can_direct_seek),
	(bacon_video_widget_common_get_vis_quality):
	* src/backend/bacon-video-widget-common.h:
	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_init), (bacon_video_widget_finalize),
	(has_subp), (get_stream_info_objects_for_type), (get_list_of_type),
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_can_direct_seek), (bacon_video_widget_close):
	* src/backend/bacon-video-widget-private.h:
	* src/backend/bacon-video-widget-xine.c: (bacon_video_widget_init),
	(xine_event_message), (bacon_video_widget_tick_send),
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_can_direct_seek),
	(bacon_video_widget_seek_time), (bacon_video_widget_close),
	(bacon_video_widget_get_position),
	(bacon_video_widget_get_stream_length),
	(bacon_video_widget_is_seekable):
	* src/backend/bacon-video-widget.h: Move
	bacon_video_widget_can_direct_seek to a common file, move vis_qualities
	there as well

2006-11-20  Christian Persch  <chpe@cvs.gnome.org>

	* src/plparser/test-parser.c:
	Port to GOption. Bug #378577.

2006-11-26  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new): Set the profile property on the audio sink
	so it respects the GNOME settings for audio output

2006-11-23  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade:
	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_new):
	* src/totem-properties-main.c: (totem_properties_get_pages): Patch
	from Eskil Bylund to fix spacing in the properties pages
	(Closes: #373171)

2006-11-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-session.c: (totem_session_restore): Patch from
	Marek Schmidt <xschmi01@stud.fit.vutbr.cz> to fix restoring the
	session. The playlist expects URI, we fed it a local filename
	(Closes: Debian #399983)
